kubernetes/apps/default/tbd/tbd.yaml
apiVersion: v1
kind: Service
metadata:
  name: tbd
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: tbd
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tbd
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "tbd2.${SECRET_DOMAIN}"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tbd2
                port:
                  number: 80
  tls:
    - hosts:
        - "tbd2.${SECRET_DOMAIN}"
      secretName: tbd2-tls-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tbd
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: tbd
  template:
    metadata:
      labels:
        app: tbd
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: tbd
          image: ghcr.io/hwestman/tbd:20260331T094803Z-sha-e56026a # {"$imagepolicy": "flux-system:tbd"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: tbd-data
